# rt-stt

./: .gitignore  BUILD_NOTES.md  CLI_TOOLS.md  CMakeLists.txt  CONFIG_MANAGEMENT.md  DAEMON_SETUP.md  DAEMON_SUMMARY.md  DAEMON_VERIFICATION.md  DEVELOPMENT_PLAN.md  FULL_METADATA.md  IMPROVING_ACCURACY.md  IPC_FIXES.md  IPC_PROTOCOL.md  IPC_README.md  QUICK_TEST.md  README.md  RT_STT_COMPLETE_REFERENCE.md  RT_STT_INTEGRATION_GUIDE.md  TROUBLESHOOTING_IPC.md  build.sh  com.rt-stt.daemon.plist  com.rt-stt.user.plist  compare_outputs.sh  debug_full_output.py  debug_stt.sh  download_better_models.sh  improve_accuracy.sh  inspect_everything.sh  reset_to_defaults.sh  switch_to_large_model.sh  test_clean.sh  test_cli_tools.sh  test_config.sh  test_config_management.sh  test_daemon_local.sh  test_debug_vad.sh  test_fixed.sh  test_input1.sh  test_input2.sh  test_ipc.sh  (+11 more)
config/: default_config.json  local_test_config.json  rt-stt.json
examples/: python_client.py
python/: setup.py
python/rt_stt/: __init__.py  __main__.py  cli.py  client.py  models.py
python/rt_stt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: download_dependencies.sh  download_models.sh  install_daemon.sh  uninstall_daemon.sh
src/: main.cpp  test_main.cpp
src/audio/: capture.cpp  capture.h  vad.cpp  vad.h
src/cli/: rt-stt-cli.cpp
src/config/: config.cpp  config.h
src/ipc/: server.cpp  server.h
src/stt/: engine.cpp  engine.h  whisper_wrapper.cpp  whisper_wrapper.h
src/utils/: terminal_output.cpp  terminal_output.h
